# barcode-scanner-client

./: .gitignore  Cargo.toml  README.md  config.yaml  graphql-sdl.gql  login.gql  todo  todo.md
config/src/: lib.rs
fun/: Cargo.toml  errors.rs  lib.rs  looper.rs  process_barcode.rs  send_barcode.rs  sync.rs  update.rs
gql-client-test/: Cargo.toml
gui/: Cargo.lock.old  Cargo.toml  Cargo.toml.old  group0.rs  group1.rs  group2.rs  group3.rs  logo.rs  logo_and_version.rs  main.rs  win.rs
gui/fn/: logo_and_version.rs
req/: Cargo.toml  check_duplicate_barcode.rs  get_ausnahmen.rs  get_lager_users.rs  get_leitcodes.rs  get_settings.rs  get_users  lib.rs  loginfn.rs  write_barcode.rs
scanner/: Cargo.toml  Cargo.toml.old  lib.rs  manager.rs  pipe.rs
sql/: lager_barcodes.sql
sqlite/: Cargo.toml  db.sqlite.template
sqlite/migrations/2023-06-06-210811_history/: up.sql
sqlite/migrations/2023-09-03-213752_users/: up.sql
sqlite/migrations/2023-09-04-195910_settings/: up.sql
sqlite/migrations/2023-09-06-181331_ausnahmen/: up.sql
sqlite/migrations/2023-09-06-195437_leitcodes/: up.sql
sqlite/migrations/2023-09-08-181754_lager_user_ids_bc/: up.sql
sqlite/src/: lib.rs  models.rs  schema.rs
sqlite/tests/: integration_tests.rs
src/: .env  devices.rs  event.rs  joystick.rs  keyboard.rs  lib.rs  main copy.rs  main.rs  manager.rs  mouse.rs  rawinput.rs  systray.rs
src/archiv/: color-themes.ts.txt  main-themes.rs.txt  main.rs  theme_shypes.rs.txt
