[package]
name = "flt-rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "1.3.16", features = ["fltk-bundled"] }
fltk-theme = "0.4"
notify-rust = "4.5.10"
winput = "0.2.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "basetsd", "hidpi", "winnt", "libloaderapi", "fileapi", "hidsdi", "handleapi"] }
native-windows-gui = { version = "1.0.10", default-features=false, features=["tray-notification", "message-window", "menu", "cursor"] }
