[package]
name = "flt-rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "1.3.16", features = ["fltk-bundled"] }
fltk-theme = "0.4"
notify-rust = "4.5.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "basetsd", "hidpi", "winnt", "libloaderapi", "fileapi", "hidsdi", "handleapi"] }